--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-毕设要做成功呀酱酱酱酱酱
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>开关柜局部放电实时监测系统</title>
+</head>
+<body>
+保定市斯德尔电气有限公司
+</body>
+</html>
